[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameTextureAssets/youtubetopbar.png" type="Texture" id=2]
[ext_resource path="res://Scripts/VideoPlayer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/VideoSmall.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameTextureAssets/youtubecolor.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/UploadPreviews.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_color = Color( 0.662745, 0.662745, 0.662745, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.07
texture = ExtResource( 2 )
expand = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_left = 0.02
anchor_top = 0.07
anchor_right = 0.7
anchor_bottom = 0.75
volume_db = 1.0
autoplay = true
script = ExtResource( 4 )

[node name="Video1" parent="." instance=ExtResource( 5 )]
anchor_left = 0.701
anchor_top = 0.08
anchor_bottom = 0.21
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="Button1" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.701
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.21

[node name="Video2" parent="." instance=ExtResource( 5 )]
anchor_left = 0.701
anchor_top = 0.22
anchor_bottom = 0.35
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.701
anchor_top = 0.22
anchor_right = 1.0
anchor_bottom = 0.35

[node name="Video3" parent="." instance=ExtResource( 5 )]
anchor_left = 0.701
anchor_top = 0.36
anchor_bottom = 0.49
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="Button3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.701
anchor_top = 0.36
anchor_right = 1.0
anchor_bottom = 0.49

[node name="Video4" parent="." instance=ExtResource( 5 )]
anchor_left = 0.701
anchor_top = 0.5
anchor_bottom = 0.64
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="Button4" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.701
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.64

[node name="Video5" parent="." instance=ExtResource( 5 )]
anchor_left = 0.701
anchor_top = 0.65
anchor_bottom = 0.78
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="Button5" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.701
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.78

[node name="Video6" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.701
anchor_top = 0.78
anchor_bottom = 0.91
rect_pivot_offset = Vector2( -1214.8, 189 )

[node name="MainVideoPause" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.02
anchor_top = 0.07
anchor_right = 0.7
anchor_bottom = 0.75
expand_icon = true

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.02
anchor_top = 0.76
anchor_right = 0.7
anchor_bottom = 0.815
custom_fonts/normal_font = SubResource( 1 )
text = "Can You Beat This Old Man at ARM WRESTLING for $500?"

[node name="User" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.811765 )
anchor_left = 0.02
anchor_top = 0.81
anchor_right = 0.7
anchor_bottom = 0.85
custom_fonts/normal_font = SubResource( 2 )
text = "Jarvis"

[node name="Description" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.811765 )
anchor_left = 0.02
anchor_top = 0.85
anchor_right = 0.7
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 2 )
text = "If a stranger can beat my grandpa at arm wrestling, win $500. I disguised the 24 year old Florida Champion Chance Shaw as an old man and had him Vs against the strongest people at muscle beach! Anyone who could beat him won $500! Idea Credit - @BrandonWilliamyt 
SUBSCRIBE TO CHANCE -   

 / chanceshawtugboat  

üï∫ TikTok: @jarvis
üì∏ Instagram: @fazejarvis
üê¶ Twitter: @liljarviss"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="MainVideoPause" to="VideoPlayer" method="_on_Button_pressed"]
